@@ -140,10 +140,17 @@ getConnection <- function(what)
 
 closeAllConnections <- function()
 {
-    sink() # might be on a user connection
+    # first re-divert any diversion of stderr.
+    i <- sink.number(type = "message")
+    if(i > 0) sink(stderr(), type = "message")
+    # now unwind the sink diversion stack.
+    n <- sink.number()
+    if(n > 0) for(i in 1:n) sink()
+    # get all the open connections.
     set <- getAllConnections()
     set <- set[set > 2]
-    for(i in seq(along=set)) close(set[i])
+    # and close all user connections.
+    for(i in seq(along=set)) close(getConnection(set[i]))
     invisible()
 }
 
