@@ -1,6 +1,6 @@
 
 R : Copyright 2001, The R Development Core Team
-Version 1.4.0 Under development (unstable) (2001-10-04)
+Version 1.4.0 Under development (unstable) (2001-10-07)
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
 You are welcome to redistribute it under certain conditions.
@@ -454,6 +454,7 @@ $v
 [7,] 0.59160798
 
 > 
+> 
 > ## Make sure  on.exit() keeps being evaluated in the proper env [from PD]:
 > ## A more complete example:
 > g1 <- function(fitted) { on.exit(remove(fitted)); return(function(foo) foo) }
@@ -501,10 +502,10 @@ NULL
 > f(structure(1,class = "bar"))
 NULL
 > e # == .GlobalEnv (in R 1.3.[01]  but not (yet?!) in 1.4.0).
-<environment: 0x8d30600>
+<environment: d72d0c>
 > 
 > 
-> ## some tests that R supports logical variables in formula
+> ## some tests that R supports logical variables in formulae
 > ## it coerced them to numeric prior to 1.4.0
 > ## they should appear like 2-level factors, following S
 > 
@@ -629,7 +630,7 @@ X    2    5    8   11
 Y    4   10   16   22
 > ## rownames were 1,2 in <= 1.3.1.
 > 
-> ## PR#1115 (saving strings with ascii=T)
+> ## PR#1115 (saving strings with ascii=TRUE)
 > x <- y <- unlist(as.list(
 +     parse(text=paste("\"\\",
 +           as.character(structure(0:255,class="octmode")),
@@ -639,5 +640,34 @@ Y    4   10   16   22
 > all(x==y)
 [1] TRUE
 > ## 1.3.1 had trouble with \
+> 
+> 
+> ## Some tests of sink() and connections()
+> ## capture all the output to a file.
+> zz <- file("all.Rout", open="wt")
+> sink(zz)
+> sink(zz, type="message")
+> try(log("a"))
+> ## back to the console
+> sink(type="message")
+> sink()
+> try(log("a"))
+Error in log(x) : Non-numeric argument to mathematical function
+> 
+> ## capture all the output to a file.
+> zz <- file("all.Rout", open="wt")
+> sink(zz)
+> sink(zz, type="message")
+> try(log("a"))
+> 
+> ## bail out
+> closeAllConnections()
+> (foo <- showConnections())
+     description class mode text isopen can read can write
+> stopifnot(nrow(foo) == 0)
+> try(log("a"))
+Error in log(x) : Non-numeric argument to mathematical function
+> unlink("all.Rout")
+> ## many of these were untested before 1.4.0.
 > 
 > 
